--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<tittle>title</title>
+<title>只是一只长颈鹿</title>
 </head>
 <body>
 <h1>love story</h1>
