--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="utf-8">
 <title>只是一只长颈鹿</title>
+  <style type="text/css">
+    body{
+      background
 </head>
 <body>
 <h1>love story</h1>
