--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <title>只是一只长颈鹿</title>
   <style type="text/css">
     body{
-      background
+      background-image: url(./0.jpg);
+      <style>
 </head>
 <body>
 <h1>love story</h1>
