--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>只是一只长颈鹿</title>
   <style type="text/css">
     body{
-      background-image: url(./0.jpg);
+      background-image: url(./0.jpg.jpg);
       <style>
 </head>
 <body>
