--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <style type="text/css">
     body{
       background-image: url(./0.jpg.jpg);
+      background-size: 100% 100%;
+      height:100%;
+    }
+    html{
+      height:100%;
+    }
       <style>
 </head>
 <body>
