--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <style>
 </head>
 <body>
-<h1>love story</h1>
-<p>love you thousand</p>
+<h1小屁孩赌球网</h1>
+<p>各大精彩赛事尽在OMG</p>
 </body>
 </html>
