--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       background-image: url(./0.jpg.jpg);
       background-size: 100% 100%;
       height:100%;
+      <h1>小屁孩赌球网</h1>
+<p>各大精彩赛事尽在OMG</p>
     }
     html{
       height:100%;
