--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     html{
       height:100%;
     }
-      </style>
+    
+      h1{
+       background-color:#678;
+       color:white；
+    }
+  </style>
 </head>
 <body>
 <h1>小屁孩赌球网</h1>
